# voice-server-rk3568

./: .gitignore  Cargo.toml  README.md  acceptance_report.md  config.toml  lessons.md  plan.md  rollback.md  spec.md  todos.md  traceability_matrix.md  驗收標準.md
deploy/: install.sh  voice-server.service
scripts/: check.mjs  download-models.mjs
src/: config.rs  error.rs  main.rs
src/asr/: engine.rs  mod.rs  vad.rs
src/tts/: engine.rs
src/ws/: handler.rs  protocol.rs
